fixed width on small viewport

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,8 @@ body {
 
 body {
 	font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    max-width: 100%;
+  max-width: 100%;
+	min-width: 576px;
 }
 h1,
 h2 {
